added specific details content

--- a/app_server/views/m-details.pug
+++ b/app_server/views/m-details.pug
@@ -1,5 +1,20 @@
 extends content-layout
 
 block main_content
-  h1= title
-  p Welcome to #{title}
+  .card 
+    .card-block 
+      h4 
+        a(href='/m') LA 
+        small &nbsp;
+          i.fas.far-star
+          i.fas.far-star
+          i.fas.far-star
+          i.fas.far-star
+          i.fas.far-star
+        span.badge.badge-pill.badge-default.float-right a1 
+      p.address a2 
+      .facilities 
+        span.badge.badge-warning aa1
+        span.badge.badge-warning aa2
+        span.badge.badge-warning aa3
+
