created content of list

--- a/app_server/views/m-details.pug
+++ b/app_server/views/m-details.pug
@@ -6,11 +6,11 @@ block main_content
       h4 
         a(href='/m') LA 
         small &nbsp;
-          i.fas.far-star
-          i.fas.far-star
-          i.fas.far-star
-          i.fas.far-star
-          i.fas.far-star
+          i.fas.fa-star
+          i.fas.fa-star
+          i.fas.fa-star
+          i.far.fa-star
+          i.far.fa-star
         span.badge.badge-pill.badge-default.float-right a1 
       p.address a2 
       .facilities 
