--- a/app_server/views/m-list.pug
+++ b/app_server/views/m-list.pug
@@ -1,5 +1,51 @@
 extends content-layout
 
 block main_content
-  h1= title
-  p Welcome to #{title}
+  .card 
+    .card-block 
+      h4 
+        a(href='/m') LA 
+        small &nbsp;
+          i.fas.fa-star
+          i.fas.fa-star
+          i.fas.fa-star
+          i.far.fa-star
+          i.far.fa-star
+        span.badge.badge-pill.badge-default.float-right a1 
+      p.address a2 
+      .facilities 
+        span.badge.badge-warning aa1
+        span.badge.badge-warning aa2
+        span.badge.badge-warning aa3
+  .card 
+    .card-block 
+      h4 
+        a(href='/m') LAa 
+        small &nbsp;
+          i.fas.fa-star
+          i.fas.fa-star
+          i.fas.fa-star
+          i.far.fa-star
+          i.far.fa-star
+        span.badge.badge-pill.badge-default.float-right a1a 
+      p.address a2a 
+      .facilities 
+        span.badge.badge-warning aa1a
+        span.badge.badge-warning aa2a
+        span.badge.badge-warning aa3a
+  .card 
+    .card-block 
+      h4 
+        a(href='/m') LAb 
+        small &nbsp;
+          i.fas.fa-star
+          i.fas.fa-star
+          i.fas.fa-star
+          i.far.fa-star
+          i.far.fa-star
+        span.badge.badge-pill.badge-default.float-right a1b 
+      p.address a2b 
+      .facilities 
+        span.badge.badge-warning aa1b
+        span.badge.badge-warning aa2b
+        span.badge.badge-warning aa3b
