--- a/app_server/views/content-layout.pug
+++ b/app_server/views/content-layout.pug
@@ -9,4 +9,4 @@ block content
     .col-12.col-md-8 
       block main_content 
     .col-12.col-md-4 
-      p.lead Looking to create or update your personal profile for an upcoming job application? ppApp hels you create a profile with a professional appeal and helps you secure that position you've been aiming at. Let ppApp set you apart from competitors and help you keep track of your skills, qualifications and experiences as your aquire them          
+      p.lead Looking to create or update your personal profile for an upcoming job application? ppApp helps you create a profile with a professional appeal and helps you secure that position you've been aiming at. Let ppApp set you apart from competitors and help you prepare for that interview and keep track of your skills, qualifications and experiences as and when you aquire them. Good Luck, the ppApp is With You!          
