add button routes to form

--- a/app_server/views/m-details.pug
+++ b/app_server/views/m-details.pug
@@ -44,7 +44,7 @@ block main_content
         .col-12 
           .card-primary.review-card 
             .card-block 
-              a.btn.btn-primary.float-right(href='/ms/mId/sms') Add SM 
+              a.btn.btn-primary.float-right(href='/ms/mId/sms/new') Add SM 
               h2.card-title SMs 
               .row.review 
                 .col-12.no-gutters.review-header 
