--- a/app_server/views/sm-form.pug
+++ b/app_server/views/sm-form.pug
@@ -1,5 +1,20 @@
-extends layout
+extends content-layout 
 
-block content
-  h1= title
-  p Welcome to #{title}
+
+block main_content
+  .row.banner 
+    .col-12 
+      h1 Life Area 
+        small &nbsp; Things are what they used to be. Now your profile must be accessible online 
+  .row 
+    .col-12.col-md-8 
+      form(action=`/ms`, method="post", role="form")
+        -  if(error == 'val')
+             .alert.alert-danger(role="alert") All fields required, please try again.
+        .form-group.row 
+          label.col-10.col-sm-2.col-form-label(for="name") Name
+          .col-12.col-sm-5 
+            input#name.form-control(name="name")
+          .col-sm-10 
+            button.btn.btn-primary.float-left Create Customer
+    .col-12.col-md-4 
