--- a/app_server/views/sm-list.pug
+++ b/app_server/views/sm-list.pug
@@ -1,5 +1,9 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  .row.banner 
+    .col-12  
+      h1= title
+  .row 
+    .col-12.col-lg-8
+       p ppApp was created to help people put pap on the table by securing employment. This is done by helping people create personal profiles that are easily printed or updated
