--- a/app_server/views/m-delete.pug
+++ b/app_server/views/m-delete.pug
@@ -1,5 +1,4 @@
-extends layout
+extends content-layout
 
-block content
-  h1= title
-  p Welcome to #{title}
+block main_content
+  a.btn.btn-primary.float-right(href='/ms/mId/del') Delete M
