--- a/app_server/views/sm-delete.pug
+++ b/app_server/views/sm-delete.pug
@@ -1,4 +1,4 @@
 extends content-layout
 
 block main_content
-  a.btn.btn-primary.float-right(href='/ms/mId/sms/smId/del') Add SM
+  a.btn.btn-primary.float-right(href='/ms/mId/sms/smId/del') Delete SM
