--- a/app_server/views/m-list.pug
+++ b/app_server/views/m-list.pug
@@ -1,51 +1,20 @@
 extends content-layout
 
 block main_content
-  .card 
-    .card-block 
-      h4 
-        a(href='/m') LA 
-        small &nbsp;
-          i.fas.fa-star
-          i.fas.fa-star
-          i.fas.fa-star
-          i.far.fa-star
-          i.far.fa-star
-        span.badge.badge-pill.badge-default.float-right a1 
-      p.address a2 
-      .facilities 
-        span.badge.badge-warning aa1
-        span.badge.badge-warning aa2
-        span.badge.badge-warning aa3
-  .card 
-    .card-block 
-      h4 
-        a(href='/m') LAa 
-        small &nbsp;
-          i.fas.fa-star
-          i.fas.fa-star
-          i.fas.fa-star
-          i.far.fa-star
-          i.far.fa-star
-        span.badge.badge-pill.badge-default.float-right a1a 
-      p.address a2a 
-      .facilities 
-        span.badge.badge-warning aa1a
-        span.badge.badge-warning aa2a
-        span.badge.badge-warning aa3a
-  .card 
-    .card-block 
-      h4 
-        a(href='/m') LAb 
-        small &nbsp;
-          i.fas.fa-star
-          i.fas.fa-star
-          i.fas.fa-star
-          i.far.fa-star
-          i.far.fa-star
-        span.badge.badge-pill.badge-default.float-right a1b 
-      p.address a2b 
-      .facilities 
-        span.badge.badge-warning aa1b
-        span.badge.badge-warning aa2b
-        span.badge.badge-warning aa3b
+  each m in Ms
+    .card 
+      .card-block 
+        h4 
+          a(href='/m') #{m.a1} 
+          small &nbsp;
+            i.fas.fa-star
+            i.fas.fa-star
+            i.fas.fa-star
+            i.far.fa-star
+            i.far.fa-star
+          span.badge.badge-pill.badge-default.float-right= m.a2 
+        p.address= m.a2 
+        each facility in m.facilities
+          .facilities 
+            span.badge.badge-warning= facility
+  
