--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -17,6 +17,14 @@ html
           ul.navbar-nav.mr-auto
             li.nav-item
               a.nav-link(href='/about/') About
+            li.nav-item
+              a.nav-link(href='/edu/') Education
+            li.nav-item
+              a.nav-link(href='/work/') Work
+            li.nav-item
+              a.nav-link(href='/projects/') Projects
+            li.nav-item
+              a.nav-link(href='/contacts/') Contacts
     .container        
       block content
       footer 
