--- a/app_server/views/m-list.pug
+++ b/app_server/views/m-list.pug
@@ -14,5 +14,5 @@ block main_content
         p.address= m.a4
         .facilities 
           each facility in m.facilities 
-            span.badge.badge-warning= facility
+            span.badge.badge-pill= facility
   
