--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -26,11 +26,12 @@ background-image: url("data:image/svgxml;charset=utf8,%3CsvgviewBox='0 0 30 30'x
 color: white;
 }
 .card {
-background-color: #469ea8;
+background-color: black;
 padding: 1rem;
+border: 1px solid green
 }
 .card-primary {
-border-color: #a2ced3;
+border-color: black;
 margin-bottom: 0.5rem;
 }
 .banner {
@@ -84,5 +85,5 @@ h4 small {
   body {
   font-family: "Cabin", Arial, sans-serif;
   color: #fff;
-  background-color: #108a93;
+  background-color: black;
   }
