--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -26,17 +26,17 @@ background-image: url("data:image/svgxml;charset=utf8,%3CsvgviewBox='0 0 30 30'x
 color: white;
 }
 .card {
-background-color: black;
+background-color:  darkslategray;
 padding: 1rem;
-border: 1px solid green
+border: 3px solid green
 }
 .card-primary {
-border-color: black;
+border-color:  darkslategray;
 margin-bottom: 0.5rem;
 }
 .banner {
 margin-top: 4em;
-border-bottom: 1px solid #469ea8;
+border-bottom: 1px solid green;
 margin-bottom: 1.5em;
 padding-bottom: 0.5em;
 }
@@ -85,5 +85,5 @@ h4 small {
   body {
   font-family: "Cabin", Arial, sans-serif;
   color: #fff;
-  background-color: black;
+  background-color: darkslategray;
   }
