can read m from base to face

--- a/app_server/views/m-details.pug
+++ b/app_server/views/m-details.pug
@@ -3,6 +3,8 @@ extends content-layout
 include _include/sharedHTMLFunctions
 
 block main_content
+  .col-12.col-md-8 
+    .error= message
   .row 
     .col-12.col-lg-9 
       .row 
