can navigate to Ms and details for each

--- a/app_server/views/content-layout.pug
+++ b/app_server/views/content-layout.pug
@@ -9,4 +9,5 @@ block content
     .col-12.col-md-8 
       block main_content 
     .col-12.col-md-4 
-      p.lead= sideBar
+      p.lead= sideBar.context 
+      p.small= sideBar.callToAction
