--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -16,15 +16,8 @@ html
         #navbarMain.navbar-collapse.collapse
           ul.navbar-nav.mr-auto
             li.nav-item
-              a.nav-link(href='/about/') About
+              a.nav-link(href='/ms/') Ms
             li.nav-item
-              a.nav-link(href='/edu/') Education
-            li.nav-item
-              a.nav-link(href='/work/') Work
-            li.nav-item
-              a.nav-link(href='/projects/') Projects
-            li.nav-item
-              a.nav-link(href='/contacts/') Contacts
     .container        
       block content
       footer 
