--- a/app_server/views/m-list.pug
+++ b/app_server/views/m-list.pug
@@ -9,7 +9,7 @@ block main_content
     .card 
       .card-block 
         h4 
-          a(href='/m')= m.a1 
+          a(href=`/ms/${m._id}`)= m.a1 
           small &nbsp;
             +outputRating(m.a2) 
           span.badge.badge-pill.badge-default.float-right= m.a3 
