--- a/app_server/views/_include/sharedHTMLFunctions.pug
+++ b/app_server/views/_include/sharedHTMLFunctions.pug
@@ -3,3 +3,12 @@ mixin outputRating(rating)
      i.fas.fa-star 
   -  for(let i = rating; i < 5;i++)
      i.far.fa-star 
+
+mixin formatDate(dateString)
+  -  const date = new Date(dateString);
+  -  const MonthNames = ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'July', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'];
+  -  const d = date.getDate();
+  -  const m = date.getMonth();
+  -  const y = date.getFullYear()
+  -  const output = `${y} ${m} ${d}    `;
+  =output  
