m create routing works

--- a/app_server/views/_include/sharedHTMLFunctions.pug
+++ b/app_server/views/_include/sharedHTMLFunctions.pug
@@ -10,5 +10,5 @@ mixin formatDate(dateString)
   -  const d = date.getDate();
   -  const m = date.getMonth();
   -  const y = date.getFullYear()
-  -  const output = `${y} ${m} ${d}    `;
+  -  const output = `${y} ${m} ${d} ---->   `;
   =output  
