--- a/app_server/views/m-list.pug
+++ b/app_server/views/m-list.pug
@@ -3,6 +3,8 @@ extends content-layout
 include _include/sharedHTMLFunctions
 
 block main_content
+  .col-12.col-md-8
+    a(href='/ms/new') Add M 
   .col-12.col-md-8 
     .error= message
   each m in Ms
