--- a/app_server/views/m-form.pug
+++ b/app_server/views/m-form.pug
@@ -32,5 +32,5 @@ block main_content
           .col-12.col-sm-5 
             input#name.form-control(name="facilities")
           .col-sm-10 
-            button.btn.btn-primary.float-left Create Customer
+            button.btn.btn-primary.float-left Create M
     .col-12.col-md-4 
