--- a/app_server/views/m-list.pug
+++ b/app_server/views/m-list.pug
@@ -14,7 +14,9 @@ block main_content
           a(href=`/ms/${m._id}`)= m.a1 
           small &nbsp;
             +outputRating(m.a2) 
-          span.badge.badge-pill.badge-default.float-right= m.a3 
+          span.badge.badge-pill.badge-default.float-right= m.a3
+          small 
+            a.float-right(href=`/ms/${m._id}/del`) delete 
         p.address= m.a4
         .facilities 
           each facility in m.facilities 
