end of express app

--- a/app_server/views/sm-list.pug
+++ b/app_server/views/sm-list.pug
@@ -1,9 +1,6 @@
-extends layout
+extends content-layout
 
-block content
-  .row.banner 
-    .col-12  
-      h1= title
+block main_content
   .row 
     .col-12.col-lg-8
        p ppApp was created to help people put pap on the table by securing employment. This is done by helping people create personal profiles that are easily printed or updated
