--- a/app_public/src/app/nav-bar/nav-bar.component.html
+++ b/app_public/src/app/nav-bar/nav-bar.component.html
@@ -1,14 +1,14 @@
 <nav class="navbar fixed-top navbar-expand-md navbar-light">
-  <div class="container"><a class="navbar-brand" href="/">ppApp</a>
+  <div class="container"><a class="navbar-brand" routerLink="">ppApp</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMain">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="navbar-collapse collapse" id="navbarMain">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item"><a class="nav-link" href="/ms/">Ms</a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="ms">Ms</a></li>
         <li class="nav-item"></li>
       </ul>
     </div>
   </div>
 </nav>
-<div class="col-12">Why???</div>
+
