created page, side bar, page header and maincontent

--- a/app_public/src/app/nav-bar/nav-bar.component.html
+++ b/app_public/src/app/nav-bar/nav-bar.component.html
@@ -5,7 +5,7 @@
     </button>
     <div class="navbar-collapse collapse" id="navbarMain">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item"><a class="nav-link" routerLink="ms">Ms</a></li>
+        <li class="nav-item"><a routerLink="ms" routerLinkActive="active" class="nav-link" >Ms</a></li>
         <li class="nav-item"></li>
       </ul>
     </div>
