m-page done, with header, sibebar and endpoint

--- a/app_public/src/app/page-header/page-header.component.html
+++ b/app_public/src/app/page-header/page-header.component.html
@@ -1,7 +1,7 @@
 <div class="row banner">
    <div class="col-12">
-     <h1>s1
-      <small>&nbsp;General statement</small>
+     <h1>{{content.title}}
+      <small>&nbsp;{{content.strapline}}</small>
     </h1>
   </div>
 </div>
