--- a/app_public/src/app/m-page/m-page.component.html
+++ b/app_public/src/app/m-page/m-page.component.html
@@ -1,10 +1,10 @@
-<app-page-header></app-page-header>
+<app-page-header [content]="pageContent.header" ></app-page-header>
 <div class="row">
   <div class="col-12 col-md-8">
      <div class="error"></div>
      <app-m-list></app-m-list>
   </div>
   <div class="col-12 col-md-4">
-    <app-side-bar></app-side-bar>
+    <app-side-bar [content]="pageContent.sideBar"></app-side-bar>
   </div>
 </div>
