--- a/app_public/src/app/home-page/home-page.component.html
+++ b/app_public/src/app/home-page/home-page.component.html
@@ -1,3 +1,5 @@
-<p>
-  home-page works!
-</p>
+<app-page-header [content]="pageContent.header" ></app-page-header>
+<div class="row">
+  <app-home-content class="col-12 col-md-8"></app-home-content>
+  <app-side-bar [content]="pageContent.sideBar" class="col-12 col-md-4"></app-side-bar>
+</div>
