--- a/app_public/src/app/m-details-content/m-details-content.component.html
+++ b/app_public/src/app/m-details-content/m-details-content.component.html
@@ -1,1 +1,53 @@
-<p>hello mdetails</p>
+<div class="col-12 col-lg-9">
+  <div class="row"> <div class="col-12 col-md-6">
+    <p class="rating">
+      <i class="fas fa-star"></i>
+      <i class="fas fa-star"> </i>
+      <i class="fas fa-star"> </i>
+      <i class="fas fa-star"> </i>
+      <i class="far fa-star"> </i>
+    </p>
+    <p>{{dbM.a1}}</p>
+    <div class="card card-primary">
+      <div class="card-block">
+        <h2 class="card-title">Duration </h2>
+        <p class="card-text">{{dbM.a3}}</p>
+        <p class="card-text">{{dbM.a4}}</p>
+        <p class="card-text">{{dbM.a5}}</p>
+       </div>
+     </div>
+     <div class="card card-primary">
+        <div class="card-block">
+          <h2 class="card-title">Facilities </h2>
+          <span *ngFor="let facility of dbM.facilities" class="badge badge-warning"> <i class="fa fa-check"> </i>&nbsp; {{facility}} </span>
+          &nbsp;
+         </div></div>
+       </div>
+       <div class="col-12 col-md-6 location-map">
+          <div class="card card-primary">
+            <div class="card-block">
+              <h2 class="card-title">LA Pictures </h2>
+             </div>
+           </div>
+         </div>
+       </div>
+       <div class="row">
+          <div class="col-12">
+            <div class="card-primary review-card">
+              <div class="card-block">
+                <a class="btn btn-primary float-right" href="/ms/{{dbM._id}}/sms/new">Add SM </a>
+                <h2 class="card-title">SMs </h2>
+                <div *ngFor="let sm of dbM.sms" class="row review">
+                  <div class="col-12 no-gutters review-header">
+                    <small class="reviewTimestamp"> {{sm.b3}} ----&gt;   </small>
+                    <small class="reviewTimestamp">{{sm.b2}}</small>
+                    <small> <a class="float-right" href="/ms/{{dbM._id}}/sms/{{sm._id}}/del">delete</a></small>
+                   </div>
+                   <div class="col-12">
+                      <p>{{sm.b1}}</p>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+         </div>
