most recent sm first

--- a/app_public/src/app/m-details-content/m-details-content.component.html
+++ b/app_public/src/app/m-details-content/m-details-content.component.html
@@ -37,7 +37,7 @@
               <div class="card-block">
                 <a class="btn btn-primary float-right" href="/ms/{{dbM._id}}/sms/new">Add SM </a>
                 <h2 class="card-title">SMs </h2>
-                <div *ngFor="let sm of dbM.sms" class="row review">
+                <div *ngFor="let sm of dbM.sms | mostRecentFirst" class="row review">
                   <div class="col-12 no-gutters review-header">
                     <small class="reviewTimestamp"> {{sm.b3}} ----&gt;   </small>
                     <small class="reviewTimestamp">{{sm.b2}}</small>
